--- a/leaderboard.html
+++ b/leaderboard.html
@@ -45,38 +45,38 @@
     </table>
 
     <script>
-        async function fetchLeaderboardData() {
-            const sheetId = '1XAAxEt24U8_Ps2a0cb9TpyNyta66I6iLPMW4l0ZGYJk';
-            const sheetName = 'Rankings';
-            const url = `https://sheets.googleapis.com/v4/spreadsheets/${sheetId}/values/${sheetName}!A1:C30?key=YOUR_API_KEY`;
+async function fetchLeaderboardData() {
+    const url = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vRbz5Rj423pNibROIjgStYLy9BrcqE064sYADBipLbsgOoZJR6ne6n1BbWBCcXqEkiYvqlsY2a3utJ7/pub?gid=1631298111&single=true&output=csv';
 
-            try {
-                const response = await fetch(url);
-                const data = await response.json();
+    try {
+        const response = await fetch(url);
+        const data = await response.text();
+        
+        // Parse CSV data (each line corresponds to a row)
+        const rows = data.split('\n').map(row => row.split(','));
 
-                if (!data.values || data.values.length === 0) {
-                    console.error('No data found.');
-                    return;
-                }
+        // Example: Log the first few rows to the console
+        console.log(rows);
 
-                const tbody = document.getElementById('leaderboard').querySelector('tbody');
-                data.values.forEach((row, index) => {
-                    if (index === 0) return;
+        // Display data on the page (modify this for your needs)
+        const tbody = document.getElementById('leaderboard').querySelector('tbody');
+        rows.forEach((row, index) => {
+            if (index === 0) return;  // Skip header row
+            const tr = document.createElement('tr');
+            row.forEach(cell => {
+                const td = document.createElement('td');
+                td.textContent = cell;
+                tr.appendChild(td);
+            });
+            tbody.appendChild(tr);
+        });
+    } catch (error) {
+        console.error('Error fetching leaderboard data:', error);
+    }
+}
 
-                    const tr = document.createElement('tr');
-                    row.forEach(cell => {
-                        const td = document.createElement('td');
-                        td.textContent = cell;
-                        tr.appendChild(td);
-                    });
-                    tbody.appendChild(tr);
-                });
-            } catch (error) {
-                console.error('Error fetching leaderboard data:', error);
-            }
-        }
+fetchLeaderboardData();
 
-        fetchLeaderboardData();
     </script>
 </body>
 </html>
