--- a/leaderboard.html
+++ b/leaderboard.html
@@ -6,37 +6,104 @@
     <title>Leaderboard</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
-            text-align: center;
+            font-family: 'Arial', sans-serif;
+            background-color: #f8f9fa;
+            color: #333;
+            margin: 0;
             padding: 20px;
+            text-align: center;
         }
+
+        h1 {
+            font-size: 2rem;
+            color: #1d428a; /* Dark blue color used by ESPN/NFL branding */
+            margin-bottom: 20px;
+        }
+
+        #refresh-timer {
+            font-size: 0.9rem;
+            color: #555;
+            margin-bottom: 10px;
+        }
+
         table {
             margin: 0 auto;
-            width: 60%;
+            width: 70%;
             border-collapse: collapse;
-        }
-        th, td {
+            background-color: #fff;
             border: 1px solid #ddd;
-            padding: 8px;
-            text-align: left;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            border-radius: 6px;
+            overflow: hidden;
         }
-        th {
-            background-color: #f2f2f2;
+
+        thead {
+            background-color: #1d428a; /* NFL Blue */
+            color: white;
+            text-transform: uppercase;
             font-weight: bold;
         }
-        tr:nth-child(even) {
-            background-color: #f9f9f9;
+
+        th, td {
+            padding: 12px 15px;
+            text-align: left;
+            border-bottom: 1px solid #ddd;
+        }
+
+        th {
+            cursor: pointer;
+            font-size: 0.9rem;
+            letter-spacing: 0.05em;
+        }
+
+        tbody tr {
+            transition: background-color 0.3s ease;
+        }
+
+        tbody tr:nth-child(even) {
+            background-color: #f2f2f2;
+        }
+
+        tbody tr:hover {
+            background-color: #e9ecef;
+        }
+
+        td {
+            font-size: 1rem;
+            color: #333;
+        }
+
+        th:hover {
+            background-color: #3b5998; /* Darker blue hover effect */
+        }
+
+        /* Responsive adjustments */
+        @media (max-width: 768px) {
+            table {
+                width: 90%;
+            }
+
+            th, td {
+                font-size: 0.9rem;
+                padding: 10px;
+            }
+
+            h1 {
+                font-size: 1.5rem;
+            }
         }
     </style>
 </head>
 <body>
-    <h1>Leaderboard</h1>
+    <h1>Super Bowl Leaderboard</h1>
+    <p id="refresh-timer">Next refresh in: <span id="timer-countdown">60</span> seconds</p>
+
     <table id="leaderboard">
         <thead>
             <tr>
-                <th>Rank</th>
-                <th>Name</th>
-                <th>Score</th>
+                <th onclick="sortTable(0)">Rank</th>
+                <th onclick="sortTable(1)">Name</th>
+                <th onclick="sortTable(2)">Score</th>
             </tr>
         </thead>
         <tbody>
@@ -45,38 +112,82 @@
     </table>
 
     <script>
-async function fetchLeaderboardData() {
-    const url = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vRbz5Rj423pNibROIjgStYLy9BrcqE064sYADBipLbsgOoZJR6ne6n1BbWBCcXqEkiYvqlsY2a3utJ7/pub?gid=1631298111&single=true&output=csv';
+        const REFRESH_INTERVAL = 60000;  // 60 seconds (60000 ms)
 
-    try {
-        const response = await fetch(url);
-        const data = await response.text();
-        
-        // Parse CSV data (each line corresponds to a row)
-        const rows = data.split('\n').map(row => row.split(','));
+        async function fetchLeaderboardData() {
+            const url = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vRbz5Rj423pNibROIjgStYLy9BrcqE064sYADBipLbsgOoZJR6ne6n1BbWBCcXqEkiYvqlsY2a3utJ7/pub?gid=1631298111&single=true&output=csv';
 
-        // Example: Log the first few rows to the console
-        console.log(rows);
+            try {
+                const response = await fetch(url);
+                const data = await response.text();
 
-        // Display data on the page (modify this for your needs)
-        const tbody = document.getElementById('leaderboard').querySelector('tbody');
-        rows.forEach((row, index) => {
-            if (index === 0) return;  // Skip header row
-            const tr = document.createElement('tr');
-            row.forEach(cell => {
-                const td = document.createElement('td');
-                td.textContent = cell;
-                tr.appendChild(td);
+                const tbody = document.getElementById('leaderboard').querySelector('tbody');
+                tbody.innerHTML = '';
+
+                const rows = data.split('\n').map(row => row.split(','));
+
+                rows.forEach((row, index) => {
+                    if (index === 0) return;
+                    if (row.length < 3) return;
+
+                    const tr = document.createElement('tr');
+                    row.forEach(cell => {
+                        const td = document.createElement('td');
+                        td.textContent = cell.trim();
+                        tr.appendChild(td);
+                    });
+                    tbody.appendChild(tr);
+                });
+            } catch (error) {
+                console.error('Error fetching leaderboard data:', error);
+            }
+        }
+
+        function sortTable(columnIndex) {
+            const table = document.getElementById('leaderboard');
+            const rows = Array.from(table.querySelectorAll('tbody tr'));
+
+            let sortDirection = table.getAttribute('data-sort-direction') === 'asc' ? 'desc' : 'asc';
+            table.setAttribute('data-sort-direction', sortDirection);
+
+            rows.sort((a, b) => {
+                let aText = a.children[columnIndex].textContent.trim();
+                let bText = b.children[columnIndex].textContent.trim();
+
+                if (columnIndex === 0 || columnIndex === 2) {
+                    return sortDirection === 'asc'
+                        ? parseFloat(aText) - parseFloat(bText)
+                        : parseFloat(bText) - parseFloat(aText);
+                }
+
+                return sortDirection === 'asc'
+                    ? aText.localeCompare(bText)
+                    : bText.localeCompare(aText);
             });
-            tbody.appendChild(tr);
-        });
-    } catch (error) {
-        console.error('Error fetching leaderboard data:', error);
-    }
-}
 
-fetchLeaderboardData();
+            const tbody = table.querySelector('tbody');
+            tbody.innerHTML = '';
+            rows.forEach(row => tbody.appendChild(row));
+        }
 
+        function startAutoRefresh() {
+            fetchLeaderboardData();
+
+            let countdown = REFRESH_INTERVAL / 1000;
+            const timerElement = document.getElementById('timer-countdown');
+
+            setInterval(() => {
+                fetchLeaderboardData();
+                countdown = REFRESH_INTERVAL / 1000;
+            }, REFRESH_INTERVAL);
+
+            setInterval(() => {
+                countdown -= 1;
+                timerElement.textContent = countdown;
+            }, 1000);
+        }
+
+        startAutoRefresh();
     </script>
 </body>
 </html>
