--- a/leaderboard.html
+++ b/leaderboard.html
@@ -95,7 +95,7 @@
     </style>
 </head>
 <body>
-    <h1>Super Bowl Leaderboard</h1>
+    <h1>Super Bowl LIX (2025) Leaderboard</h1>
     <p id="refresh-timer">Next refresh in: <span id="timer-countdown">60</span> seconds</p>
 
     <table id="leaderboard">
