--- a/IndividualResponse.html
+++ b/IndividualResponse.html
@@ -112,4 +112,145 @@
 
             h1 {
                 font-size: 1.5rem;
-          
+            }
+
+            select {
+                width: 90%;
+            }
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <a href="leaderboard.html">&larr; Back to Leaderboard</a>
+    </header>
+
+    <h1>Player Responses</h1>
+    <label for="player-select">Select a player:</label>
+    <select id="player-select">
+        <option value="">-- Select a player --</option>
+    </select>
+
+    <div class="player-info" id="player-info"></div>
+
+    <table id="response-table">
+        <thead>
+            <tr>
+                <th>Question</th>
+                <th>Response</th>
+            </tr>
+        </thead>
+        <tbody>
+            <!-- Data will be inserted here by JavaScript -->
+        </tbody>
+    </table>
+
+    <script>
+        const SHEET_URL = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vRbz5Rj423pNibROIjgStYLy9BrcqE064sYADBipLbsgOoZJR6ne6n1BbWBCcXqEkiYvqlsY2a3utJ7/pub?gid=1631298111&single=true&output=csv';
+        let playersData = [];
+
+        // Fetch data from the published Google Sheet
+        async function fetchData() {
+            const response = await fetch(SHEET_URL);
+            const data = await response.text();
+
+            // Parse CSV data
+            const rows = data.split('\n').map(row => row.split(','));
+
+            // The first row is the header
+            const headers = rows.shift();
+
+            // Extract player data
+            rows.forEach(row => {
+                if (row.length >= 3) {
+                    playersData.push({
+                        rank: row[0].trim(),
+                        name: row[1].trim(),
+                        score: row[2].trim(),
+                        responses: row.slice(3).map((response, index) => ({
+                            question: headers[index + 3] || `Question ${index + 1}`,
+                            response: response.trim()
+                        }))
+                    });
+                }
+            });
+
+            populatePlayerDropdown();
+        }
+
+        // Populate the dropdown with player names
+        function populatePlayerDropdown() {
+            const selectElement = document.getElementById('player-select');
+            playersData.forEach(player => {
+                const option = document.createElement('option');
+                option.value = player.name;
+                option.textContent = player.name;
+                selectElement.appendChild(option);
+            });
+
+            // Automatically select a player if a name is passed in the URL
+            const urlParams = new URLSearchParams(window.location.search);
+            const selectedPlayerName = urlParams.get('name');
+
+            if (selectedPlayerName) {
+                selectElement.value = selectedPlayerName;
+                handlePlayerSelection();
+            }
+
+            // Add event listener for when a player is manually selected
+            selectElement.addEventListener('change', handlePlayerSelection);
+        }
+
+        // Handle player selection and display their data
+        function handlePlayerSelection() {
+            const selectedPlayerName = document.getElementById('player-select').value;
+            const player = playersData.find(p => p.name === selectedPlayerName);
+
+            if (player) {
+                displayPlayerInfo(player);
+                displayPlayerResponses(player.responses);
+            } else {
+                clearPlayerInfo();
+                clearPlayerResponses();
+            }
+        }
+
+        // Display the player's score and rank
+        function displayPlayerInfo(player) {
+            const playerInfo = document.getElementById('player-info');
+            playerInfo.textContent = `Rank: ${player.rank} | Score: ${player.score}`;
+        }
+
+        // Display the player's responses
+        function displayPlayerResponses(responses) {
+            const tbody = document.getElementById('response-table').querySelector('tbody');
+            tbody.innerHTML = '';
+
+            responses.forEach(response => {
+                const tr = document.createElement('tr');
+                const questionTd = document.createElement('td');
+                const responseTd = document.createElement('td');
+
+                questionTd.textContent = response.question;
+                responseTd.textContent = response.response;
+
+                tr.appendChild(questionTd);
+                tr.appendChild(responseTd);
+                tbody.appendChild(tr);
+            });
+        }
+
+        // Clear player info and responses when no player is selected
+        function clearPlayerInfo() {
+            document.getElementById('player-info').textContent = '';
+        }
+
+        function clearPlayerResponses() {
+            document.getElementById('response-table').querySelector('tbody').innerHTML = '';
+        }
+
+        // Fetch data on page load
+        fetchData();
+    </script>
+</body>
+</html>
