--- a/leaderboard.html
+++ b/leaderboard.html
@@ -123,7 +123,7 @@
 
     <script>
         const REFRESH_INTERVAL = 60000;  // 60 seconds
-        const RESPONSE_PAGE_URL = 'individualResponse.html';
+        const RESPONSE_PAGE_URL = 'player-responses.html';
 
         async function fetchLeaderboardData() {
             const url = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vRbz5Rj423pNibROIjgStYLy9BrcqE064sYADBipLbsgOoZJR6ne6n1BbWBCcXqEkiYvqlsY2a3utJ7/pub?gid=1631298111&single=true&output=csv';
