--- a/player-responses.html
+++ b/player-responses.html
@@ -15,7 +15,7 @@
         }
 
         header {
-            background-color: #1d428a; /* NFL Blue */
+            background-color: #1d428a;
             color: white;
             padding: 10px 20px;
             text-align: left;
@@ -44,22 +44,6 @@
             color: #333;
             margin-bottom: 10px;
             display: block;
-        }
-
-        select {
-            padding: 10px;
-            font-size: 1rem;
-            margin-bottom: 20px;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-            background-color: #fff;
-            width: 50%;
-        }
-
-        select:focus {
-            outline: none;
-            border-color: #1d428a;
-            box-shadow: 0 0 5px rgba(29, 66, 138, 0.5);
         }
 
         .player-info {
@@ -113,10 +97,6 @@
             h1 {
                 font-size: 1.5rem;
             }
-
-            select {
-                width: 90%;
-            }
         }
     </style>
 </head>
@@ -126,10 +106,6 @@
     </header>
 
     <h1>Player Responses</h1>
-    <label for="player-select">Select a player:</label>
-    <select id="player-select">
-        <option value="">-- Select a player --</option>
-    </select>
 
     <div class="player-info" id="player-info"></div>
 
@@ -149,7 +125,6 @@
         const SHEET_URL = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vRbz5Rj423pNibROIjgStYLy9BrcqE064sYADBipLbsgOoZJR6ne6n1BbWBCcXqEkiYvqlsY2a3utJ7/pub?gid=1631298111&single=true&output=csv';
         let playersData = [];
 
-        // Fetch data from the published Google Sheet
         async function fetchData() {
             const response = await fetch(SHEET_URL);
             const data = await response.text();
@@ -157,82 +132,56 @@
             // Parse CSV data
             const rows = data.split('\n').map(row => row.split(','));
 
-            // The first row is the header
-            const headers = rows.shift();
+            // Extract the headers and questions (from row 5)
+            const questions = rows[4].slice(5);  // Columns F to AV in row 5
 
-            // Extract player data
-            rows.forEach(row => {
-                if (row.length >= 3) {
+            // Extract player responses and names
+            for (let i = 5; i < rows.length; i++) {
+                const row = rows[i];
+                const playerName = row[4].trim();  // Column E in the row
+
+                if (playerName) {
                     playersData.push({
-                        rank: row[0].trim(),
-                        name: row[1].trim(),
-                        score: row[2].trim(),
-                        responses: row.slice(3).map((response, index) => ({
-                            question: headers[index + 3] || `Question ${index + 1}`,
-                            response: response.trim()
-                        }))
+                        name: playerName,
+                        responses: row.slice(5)  // Columns F to AV contain responses
                     });
                 }
-            });
+            }
 
-            populatePlayerDropdown();
+            displayPlayerData(questions);
         }
 
-        // Populate the dropdown with player names
-        function populatePlayerDropdown() {
-            const selectElement = document.getElementById('player-select');
-            playersData.forEach(player => {
-                const option = document.createElement('option');
-                option.value = player.name;
-                option.textContent = player.name;
-                selectElement.appendChild(option);
-            });
-
-            // Automatically select a player if a name is passed in the URL
+        function displayPlayerData(questions) {
+            // Get the player name from the URL parameter
             const urlParams = new URLSearchParams(window.location.search);
             const selectedPlayerName = urlParams.get('name');
 
-            if (selectedPlayerName) {
-                selectElement.value = selectedPlayerName;
-                handlePlayerSelection();
-            }
-
-            // Add event listener for when a player is manually selected
-            selectElement.addEventListener('change', handlePlayerSelection);
-        }
-
-        // Handle player selection and display their data
-        function handlePlayerSelection() {
-            const selectedPlayerName = document.getElementById('player-select').value;
+            // Find the player in the data
             const player = playersData.find(p => p.name === selectedPlayerName);
 
             if (player) {
-                displayPlayerInfo(player);
-                displayPlayerResponses(player.responses);
+                // Display player info
+                const playerInfo = document.getElementById('player-info');
+                playerInfo.textContent = `Name: ${player.name}`;
+
+                // Display player responses
+                displayPlayerResponses(questions, player.responses);
             } else {
-                clearPlayerInfo();
-                clearPlayerResponses();
+                document.getElementById('player-info').textContent = 'Player not found.';
             }
         }
 
-        // Display the player's score and rank
-        function displayPlayerInfo(player) {
-            const playerInfo = document.getElementById('player-info');
-            playerInfo.textContent = `Rank: ${player.rank} | Score: ${player.score}`;
-        }
-
-        // Display the player's responses
-        function displayPlayerResponses(responses) {
+        function displayPlayerResponses(questions, responses) {
             const tbody = document.getElementById('response-table').querySelector('tbody');
             tbody.innerHTML = '';
 
-            responses.forEach(response => {
+            questions.forEach((question, index) => {
                 const tr = document.createElement('tr');
                 const questionTd = document.createElement('td');
                 const responseTd = document.createElement('td');
 
-                questionTd.textContent = response.question;
-                responseTd.textContent = response.response;
+                questionTd.textContent = question.trim();
+                responseTd.textContent = responses[index]?.trim() || 'N/A';
 
                 tr.appendChild(questionTd);
                 tr.appendChild(responseTd);
@@ -240,16 +189,6 @@
             });
         }
 
-        // Clear player info and responses when no player is selected
-        function clearPlayerInfo() {
-            document.getElementById('player-info').textContent = '';
-        }
-
-        function clearPlayerResponses() {
-            document.getElementById('response-table').querySelector('tbody').innerHTML = '';
-        }
-
-        // Fetch data on page load
         fetchData();
     </script>
 </body>
