Update player-responses.html -  Updated table body height

--- a/player-responses.html
+++ b/player-responses.html
@@ -73,7 +73,7 @@
             margin: 0 auto;
             width: 70%;
             overflow-y: auto;
-            max-height: 400px; /* Show only 13 rows (adjust based on row height) */
+            max-height: 800px; /* Adjusted to fit 13 rows */
             border: 1px solid #ddd;
             border-radius: 6px;
             background-color: #fff;
@@ -125,6 +125,7 @@
         @media (max-width: 768px) {
             .table-container {
                 width: 90%;
+                max-height: 520px; /* Adjusted for smaller screens */
             }
 
             th, td {
